Corrected the click on Light / dark mode in menu. Added dark light mo… (#225)
* Corrected the click on Light / dark mode in menu. Added dark light mode menu text entry in languages as token

* Changed color as indicated in the PR

* Changed the sw version

---------

--- a/src/modules/gamePlayer/styles/TimerControl.scss
+++ b/src/modules/gamePlayer/styles/TimerControl.scss
@@ -34,3 +34,10 @@
     }
 }
 
+
+body.lightMode {
+    .playButton {
+        background-color: #A0BCC2;
+    }    
+}
+
